--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
   "name": "cocomo",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "license": "Apache-2.0",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "antd": "^3.26.11",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1",
-    "typescript": "~3.7.2"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
+    "react-use-media-query-hook": "^0.0.1",
+    "styled-components": "^5.0.1",
+    "typescript": "^3.8.2"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "latest",
+    "@testing-library/react": "9.4.1",
+    "@testing-library/user-event": "10.0.0",
+    "@types/jest": "25.1.3",
+    "@types/node": "13.7.4",
+    "@types/react": "16.9.22",
+    "@types/react-dom": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
