--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
   "name": "cocomo",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "Apache-2.0",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build"
+  },
   "dependencies": {
-    "antd": "^4.0.3",
+    "antd": "^4.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "3.4.1",
     "react-use-media-query-hook": "^0.0.1",
-    "styled-components": "^5.0.1",
+    "styled-components": "^5.1.0",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "latest",
-    "@testing-library/react": "10.0.1",
-    "@testing-library/user-event": "10.0.0",
-    "@types/jest": "25.1.4",
-    "@types/node": "13.9.2",
-    "@types/react": "16.9.23",
-    "@types/react-dom": "latest"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "@types/node": "13.11.1",
+    "@types/react": "16.9.34",
+    "@types/react-dom": "16.9.6",
+    "@types/styled-components": "^5.1.0",
+    "@types/react-router-dom": "^5.1.4"
   },
   "browserslist": {
     "production": [
